        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=11001
        WebKit doesn't support RegExp.compile method

        Test: fast/js/regexp-compile.html

        * kjs/regexp_object.cpp:
        (RegExpPrototype::RegExpPrototype):
        (RegExpProtoFunc::callAsFunction):
        * kjs/regexp_object.h:
        (KJS::RegExpProtoFunc::):
        Added RegExp.compile.

        * tests/mozilla/expected.html: js1_2/regexp/compile.js now passes.



Canonical link: https://commits.webkit.org/21224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27303 268f45cc-cd09-0410-ab3c-d52691b4dbfc